Fix extra space in incidents view

--- a/src/components/IncidentsMenu/IncidentsMenu.css
+++ b/src/components/IncidentsMenu/IncidentsMenu.css
@@ -1,6 +1,7 @@
 .incidents-menu {
   display: flex;
   justify-content: space-around;
+  min-height: 85vh;
 }
 
 
